WIPL:dropdown z-index fix

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -485,3 +485,10 @@ header nav ul li ul{
 .dev-name, .dev-info {
   text-align: center;
 }
+
+/* temp fix for dropdowns */
+
+.dropdown{
+  z-index: 10000;
+  background-color: white;
+}
